# castor-fftw

./: .buildinfo  .gitignore  LICENSE  README.md  api.html  developers.html  genindex.html  howto.html  index.html  installation.html  objects.inv  search.html  searchindex.js
.github/workflows/: main.yml
_sources/: api.rst.txt  howto.rst.txt  installation.rst.txt
demo/: demo_double.cpp  demo_fftshift.cpp  demo_float.cpp
demo/demo_full/: CMakeLists.txt  main.cpp
doc/: Doxyfile  Makefile  environment.yml
doc/source/: api.rst  conf.py  developers.rst  howto.rst  index.rst  installation.rst
doc/source/_static/: main_stylesheet.css
include/castor/: castor_fftw.hpp  castor_fftwf.hpp  castor_fftwm.hpp
